<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.kayhut</groupId>
    <artifactId>fuse</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <modules>
        <module>fuse-unipop</module>
        <module>fuse-dispatcher</module>
        <module>fuse-service</module>
        <module>fuse-model</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <top.dir>${project.basedir}</top.dir>
        <version.major>1</version.major>
        <version.minor>11</version.minor>

        <!-- maven build help utility-->
        <build-helper-maven-plugin.version>1.9</build-helper-maven-plugin.version>
        <!-- maven checksum plugin -->
        <checksum-maven-plugin.version>1.2</checksum-maven-plugin.version>
        <!-- apache common logging -->
        <commons-logging.version>1.1.3</commons-logging.version>
        <!-- maven static code analysis -->
        <findbugs.version>3.0.1</findbugs.version>
        <!-- maven git tag plugin -->
        <git-commit-id-plugin.version>2.1.9</git-commit-id-plugin.version>

        <!-- guava functional libraries -->
        <guava.version>18.0</guava.version>
        <!-- joda time libraries -->
        <joda.version>2.8.1</joda.version>
        <!-- hamcrest testing spec libraries -->
        <hamcrest.version>1.3</hamcrest.version>
        <mockito-all.version>1.10.19</mockito-all.version>
        <!-- jetty web-server -->
        <jetty.version>9.2.15.v20160210</jetty.version>
        <!-- junit testing -->
        <junit.version>4.12</junit.version>
        <slf4j.version>1.7.13</slf4j.version>
        <!-- maven checkstyle plugin -->
        <maven-checkstyle-plugin.version>2.12.1</maven-checkstyle-plugin.version>
        <!-- maven dependency plugin -->
        <maven-dependency-plugin.version>2.10</maven-dependency-plugin.version>
        <!-- maven shade plugin (uber-jar)-->
        <maven-shade-plugin.version>2.1</maven-shade-plugin.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <configuration>
                            <configLocation>${top.dir}/src/main/config/checkstyle/checker.xml</configLocation>
                            <suppressionsLocation>${top.dir}/src/main/config/checkstyle/suppressions.xml</suppressionsLocation>
                            <consoleOutput>true</consoleOutput>
                            <headerLocation>${top.dir}/src/main/config/checkstyle/header.txt</headerLocation>
                            <failOnViolation>true</failOnViolation>
                            <includeTestSourceDirectory>true</includeTestSourceDirectory>
                        </configuration>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>analyze</id>
                        <goals>
                            <goal>analyze-only</goal>
                        </goals>
                        <configuration>
                            <failOnWarning>true</failOnWarning>
                        </configuration>
                    </execution>
                </executions>
            </plugin>


        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-checkstyle-plugin</artifactId>
                    <version>${maven-checkstyle-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>failsafe-integration-test</id>
                            <goals>
                                <goal>integration-test</goal>
                            </goals>
                            <phase>integration-test</phase>
                            <configuration>
                                <threadCount>6</threadCount>
                                <parallel>both</parallel>
                                <argLine>-Xmx1024m</argLine>
                            </configuration>
                        </execution>
                        <execution>
                            <id>failsafe-verify</id>
                            <goals>
                                <goal>verify</goal>
                            </goals>
                            <phase>verify</phase>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.0.2</version>
                    <configuration>
                        <archive>
                            <manifest>
                                <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            </manifest>
                        </archive>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>${maven-shade-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.0.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <threadCount>1</threadCount>
                        <perCoreThreadCount>true</perCoreThreadCount>
                        <parallel>both</parallel>
                        <argLine>-Xmx1536m -XX:MaxPermSize=256m -Duser.timezone=${user.timezone}</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>pl.project13.maven</groupId>
                    <artifactId>git-commit-id-plugin</artifactId>
                    <version>${git-commit-id-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>

    </build>

    <!-- todo add bitbucket repo-->
    <repositories></repositories>

    <!-- todo profiles -->
    <profiles></profiles>

</project>